--- a/tributos.html
+++ b/tributos.html
@@ -23,8 +23,8 @@
 <body>
 
 <header>
-    <img src="./img/logo.png" alt="" class="logo">
-    <div class="slogan">Spend Invoice Management (SIM)</div>
+    <img width="280px" src="./img/logo.svg" alt="" class="logo">
+    <div class="slogan">Spend View</div>
 
     <div id="hamb">
         <span></span>
