--- a/perfil.html
+++ b/perfil.html
@@ -14,16 +14,17 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="">
 
-    <title>Accounts</title>
+    <title>NFe</title>
 
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,700|Oswald" rel="stylesheet">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
 <body>
 
 <header>
-    <img src="../img/logo.png" alt="" class="logo">
+    <img width="280px" src="./img/logo.svg" alt="" class="logo">
+    <div class="slogan">Spend View</div>
 
     <div id="hamb">
         <span></span>
@@ -44,7 +45,7 @@
             <span></span>
         </div>
         <div class="bt-perfil bts">
-            <div class="photo" style="background-image: url('../img/char.jpg');"></div>
+            <div class="photo" style="background-image: url('./img/char.jpg');"></div>
         </div>
 
         <div class="littlebox box-apps">
@@ -52,32 +53,32 @@
 
             <div class="ctapps">
                 <a href="#" class="_l7">
-                    <img src="../img/icons/processo.png" alt="">
+                    <img src="./img/icons/processo.png" alt="">
                     <p>Processo Genérico</p>
                     <span>Free Trial</span>
                 </a>
                 <a href="#" class="_l7">
-                    <img src="../img/icons/requisicao.png" alt="">
+                    <img src="./img/icons/requisicao.png" alt="">
                     <p>Processo Genérico</p>
                     <span>Free Trial</span>
                 </a>
                 <a href="#" class="_l7">
-                    <img src="../img/icons/pedido.png" alt="">
+                    <img src="./img/icons/pedido.png" alt="">
                     <p>Processo Genérico</p>
                     <span>Free Trial</span>
                 </a>
                 <a href="#" class="_l7">
-                    <img src="../img/icons/cotacao.png" alt="">
+                    <img src="./img/icons/cotacao.png" alt="">
                     <p>Processo Genérico</p>
                     <span>Free Trial</span>
                 </a>
                 <a href="#" class="_l7">
-                    <img src="../img/icons/contratacao.png" alt="">
+                    <img src="./img/icons/contratacao.png" alt="">
                     <p>Processo Genérico</p>
                     <span>Free Trial</span>
                 </a>
                 <a href="#" class="_l7">
-                    <img src="../img/icons/pagamentos.png" alt="">
+                    <img src="./img/icons/pagamentos.png" alt="">
                     <p>Processo Genérico</p>
                     <span>Free Trial</span>
                 </a>
@@ -89,7 +90,7 @@
         </div>
 
         <div class="littlebox box-perfil">
-            <div class="avatar" style="background-image: url(../img/char.jpg);"></div>
+            <div class="avatar" style="background-image: url(./img/char.jpg);"></div>
             <div class="name">Henrique Tomé</div>
             <div class="mail">henrique@coobo.com.br</div>
             <a href="perfil.html" class="btn-editar"><i class="sprited ico-edit"></i>Editar Perfil</a>
@@ -102,22 +103,20 @@
 
 <nav id="main">
     <ul>
-        <li><a href="initial.html">Página Principal</a></li>
-        <li><a href="tutorial.html">Tutorial</a></li>
+        <li><a href="index.html">Página Principal</a></li>
         <li>
             <a href="#" class="submenu">Cadastros</a>
             <ul>
-                <li><a href="organization.html">Organizações</a></li>
-                <li><a href="departament.html">Departamentos</a></li>
-                <li><a href="cargos.html">Cargos</a></li>
-                <li><a href="users.html">Usuários</a></li>
-                <li><a href="aprovacoes.html">Aprovações</a></li>
+                <li><a href="monitoramento.html">CNPJs</a></li>
             </ul>
         </li>
-        <li><a href="accounts.html">Administração de Conta</a></li>
-        <li><a href="plans.html">Meu Plano</a></li>
-        <li><a href="access.html">Histórico de Acessos</a></li>
-        <li><a href="payment.html">Dados de Cobrança</a></li>
+        <li>
+            <a href="#" class="submenu">Configurações</a>
+            <ul>
+                <li><a href="fontes.html">Fontes de Captura</a></li>
+                <li><a href="permissoes.html">Permissões</a></li>
+            </ul>
+        </li>
     </ul>
 </nav>
 
@@ -126,7 +125,7 @@
     <h1>Editar Perfil</h1>
 
     <div class="ini">
-        <div class="type pfl" style="background-image: url('../img/char.jpg');"></div>
+        <div class="type pfl" style="background-image: url('img/char.jpg');"></div>
         <div class="_z7">
             <div class="pj"><strong>Henrique Tomé</strong></div>
             <div class="file">
@@ -188,9 +187,9 @@
 
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-rc1/jquery.min.js"></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script src="../js/functions.js"></script>
-<script src="../js/api.js"></script>
-<script src="../js/app.js"></script>
+<script src="js/functions.js"></script>
+<script src="js/api.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
